--- a/lib/configs/config.yml
+++ b/lib/configs/config.yml
@@ -7,21 +7,21 @@ env:
     method: 'RK45'
 
 model:
-    n_layers: 6
-    nf: 512
+    n_layers: 2
+    nf: 32
     normalization: 'layernorm'
     activation: 'silu'
 
 train:
-    max_episode: 10000
-    entropy_beta: 1.0e-4
+    max_episode: 100000
+    entropy_beta: 0.
     grad_clip: 10 # critical
     discount: 1
-    lr: 1.0e-4
+    lr: 1.0e-3
     log_freq: 1
-    eval_freq: 5
-    save_freq: 5
+    eval_freq: 1
+    save_freq: 1
     archive_freq: 100
 
 eval:
-    ckpt_num: 5
+    ckpt_num: 200
